// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenListItem basic rendering renders correctly and matches snapshot 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
  testID="token-list-item-eip155:1/slip44:60"
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "flex-start",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
            >
              <Image
                onError={[Function]}
                resizeMode="contain"
                source={
                  {
                    "uri": "https://example.com/eth.png",
                  }
                }
                style={
                  {
                    "flex": 1,
                    "height": undefined,
                    "width": undefined,
                  }
                }
                testID="token-avatar-image"
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={
                    {
                      "uri": "https://example.com/network.png",
                    }
                  }
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 18,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Ethereum
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          ETH
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`TokenListItem basic rendering renders disabled token with info button and matches snapshot 1`] = `
<TouchableOpacity
  disabled={true}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 0.5,
      "position": "relative",
    }
  }
  testID="token-list-item-eip155:1/slip44:60"
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "flex-start",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
            >
              <Image
                onError={[Function]}
                resizeMode="contain"
                source={
                  {
                    "uri": "https://example.com/eth.png",
                  }
                }
                style={
                  {
                    "flex": 1,
                    "height": undefined,
                    "width": undefined,
                  }
                }
                testID="token-avatar-image"
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={
                    {
                      "uri": "https://example.com/network.png",
                    }
                  }
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 18,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Ethereum
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          ETH
        </Text>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 2,
                  "height": 32,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 32,
                },
                undefined,
              ]
            }
            testID="token-unsupported-info-button"
          >
            <SvgMock
              fill="currentColor"
              name="Info"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 20,
                    "width": 20,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;
